first commit3 add webGl_test

--- a/views/index.html
+++ b/views/index.html
@@ -87,7 +87,7 @@
 	   }
 	   window.onload=aa;
 	   function changeToGame(){
-		window.location.href+='snake/index.html';
+		window.location.href+='webGL_test/test1.html';
 	   
 	   }
 	   </script>
